continue with home page

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,14 @@
 
 <section class="hero-main">
 	<div class="container hero-main__container">
-		<h1 class="hero-main__title" data-text="ДРУГИЕ ТОВАРЫ ОПТОМ">ФОНАРИ И МНОГИЕ<br>ДРУГИЕ ТОВАРЫ ОПТОМ</h1>
+		<div class="site-logo mobile-only">
+			<img src="images/dist/logo.png" alt="#" class="logo-img">
+			<span class="logo-text">ИСКРА</span>
+		</div>
+		<h1 class="hero-main__title title">
+			<span class="desktop-only" data-text="ДРУГИЕ ТОВАРЫ ОПТОМ">ФОНАРИ И МНОГИЕ <br>ДРУГИЕ ТОВАРЫ ОПТОМ</span>
+			<span class="mobile-only">ФОНАРИ ОПТОМ <br>ПО САМЫМ <br>НИЗКИМ ЦЕНАМ</span>
+		</h1>
 		<div class="hero-main__btns">
 			<a href="#" class="btn btn_transparent btn_large">Открыть каталог</a>
 			<a href="#" class="btn btn_transparent btn_outline btn_large">Прайс-лист</a>
@@ -49,8 +56,10 @@
 					<div class="banner banner_v" style="background-image: url('images/dist/about-2.png')">
 						<h3 class="banner__title title">Как заказать</h3>
 						<div class="banner__text">
-							<p>Мы заботимся о наших клиентах и всегда готовы идти на встречу решении любых вопросов.</p>
-							<p>Обнаружили брак? Свяжитесь с нами и мы решим эту проблему!</p>
+							<p>Для того чтобы создать заказ, свяжитесь с нами или добавьте товары в корзину и отправьте заявку на
+								сборку, предварительно указав в заказе свои контактные данные. </p>
+							<p>Мы с вами свяжемся и уточним
+								детали!</p>
 						</div>
 						<a href="#" class="banner__btn btn btn_small">Открыть каталог</a>
 					</div>
@@ -61,8 +70,8 @@
 						<div class="banner__content">
 							<h3 class="banner__title title">Лучшие товары по самой доступной цене!</h3>
 							<div class="banner__text">
-								<p>Мы заботимся о наших клиентах и всегда готовы идти на встречу решении любых вопросов.</p>
-								<p>Обнаружили брак? Свяжитесь с нами и мы решим эту проблему!</p>
+								<p>Мы предлагаем нашим клиентам самые лучшие оптовые цены на множество разных товаров</p>
+								<p>Скачайте наш прайс-лист и ознакомьтесь с нашими ценами</p>
 							</div>
 						</div>
 						<a href="#" class="banner__btn btn">Прайс-лист</a>
