--- a/app/footer.html
+++ b/app/footer.html
@@ -3,7 +3,7 @@
 		<div class="container site-footer__container">
 			<div class="site-footer__col">
 				<div class="site-footer__logo">
-					<img src="../images/dist/logo.png" alt="#" class="site-logo site-logo_black">
+					<img src="images/dist/logo.png" alt="#" class="site-logo site-logo_black">
 					<span class="logo-text">Искра</span>
 				</div>
 			</div>
@@ -12,8 +12,8 @@
 				<br>
 				<span>Способы связаться с нами:</span>
 				<div class="site-footer__contacts__icons">
-					<a href="#"><img src="../images/dist/contact-phone.png" alt="#"></a>
-					<a href="#"><img src="../images/dist/contact-whatsapp.png" alt="#"></a>
+					<a href="#"><img src="images/dist/contact-phone.png" alt="#"></a>
+					<a href="#"><img src="images/dist/contact-whatsapp.png" alt="#"></a>
 				</div>
 			</div>
 			<div class="site-footer__col site-footer__navmenu__wrapper">
