--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!--#set var="title" value="ИСКРА" -->
-<!--#include virtual="/parts/header.html" -->
+<!--#include virtual="/header.html" -->
 
 <section class="hero-main">
 	<div class="container hero-main__container">
@@ -299,4 +299,4 @@
 	</div>
 </section>
 
-<!--#include virtual="/parts/footer.html" -->
+<!--#include virtual="/footer.html" -->
