--- a/app/index.html
+++ b/app/index.html
@@ -111,7 +111,7 @@
 			<div class="products-carousel__item">
 				<div class="products-carousel__item__wrapper">
 					<div>
-						<img src="images/dist/_product-1.png" alt="#" class="products-carousel__item__img">
+						<img src="images/dist/product-1.png" alt="#" class="products-carousel__item__img">
 						<span class="products-carousel__item__art">XQ-24</span>
 						<h3 class="products-carousel__item__title">Название товара</h3>
 					</div>
@@ -127,7 +127,7 @@
 			<div class="products-carousel__item">
 				<div class="products-carousel__item__wrapper">
 					<div>
-						<img src="images/dist/_product-2.png" alt="#" class="products-carousel__item__img">
+						<img src="images/dist/product-2.png" alt="#" class="products-carousel__item__img">
 						<span class="products-carousel__item__art">XQ-24</span>
 						<h3 class="products-carousel__item__title">Название товара</h3>
 					</div>
@@ -143,7 +143,7 @@
 			<div class="products-carousel__item">
 				<div class="products-carousel__item__wrapper">
 					<div>
-						<img src="images/dist/_product-3.png" alt="#" class="products-carousel__item__img">
+						<img src="images/dist/product-3.png" alt="#" class="products-carousel__item__img">
 						<span class="products-carousel__item__art">XQ-24</span>
 						<h3 class="products-carousel__item__title">Название товара</h3>
 					</div>
@@ -159,7 +159,7 @@
 			<div class="products-carousel__item">
 				<div class="products-carousel__item__wrapper">
 					<div>
-						<img src="images/dist/_product-1.png" alt="#" class="products-carousel__item__img">
+						<img src="images/dist/product-1.png" alt="#" class="products-carousel__item__img">
 						<span class="products-carousel__item__art">XQ-24</span>
 						<h3 class="products-carousel__item__title">Название товара</h3>
 					</div>
@@ -175,7 +175,7 @@
 			<div class="products-carousel__item">
 				<div class="products-carousel__item__wrapper">
 					<div>
-						<img src="images/dist/_product-2.png" alt="#" class="products-carousel__item__img">
+						<img src="images/dist/product-2.png" alt="#" class="products-carousel__item__img">
 						<span class="products-carousel__item__art">XQ-24</span>
 						<h3 class="products-carousel__item__title">Название товара</h3>
 					</div>
@@ -191,7 +191,7 @@
 			<div class="products-carousel__item">
 				<div class="products-carousel__item__wrapper">
 					<div>
-						<img src="images/dist/_product-3.png" alt="#" class="products-carousel__item__img">
+						<img src="images/dist/product-3.png" alt="#" class="products-carousel__item__img">
 						<span class="products-carousel__item__art">XQ-24</span>
 						<h3 class="products-carousel__item__title">Название товара</h3>
 					</div>
@@ -219,7 +219,7 @@
 		<div class="last-posts__wrapper">
 			<div class="last-posts__item">
 				<div>
-					<img src="images/dist/_blog-1.png" alt="#" class="last-posts__item__img">
+					<img src="images/dist/blog-1.png" alt="#" class="last-posts__item__img">
 					<span class="last-posts__item__date">25 апр 2023</span>
 					<h3 class="last-posts__item__title title">Налобные фонари с 1 режимом света</h3>
 					<div class="last-posts__item__descr">
@@ -240,7 +240,7 @@
 			</div>
 			<div class="last-posts__item">
 				<div>
-					<img src="images/dist/_blog-2.png" alt="#" class="last-posts__item__img">
+					<img src="images/dist/blog-2.png" alt="#" class="last-posts__item__img">
 					<span class="last-posts__item__date">25 апр 2023</span>
 					<h3 class="last-posts__item__title title">Налобные фонари с 1 режимом света</h3>
 					<div class="last-posts__item__descr">
@@ -261,7 +261,7 @@
 			</div>
 			<div class="last-posts__item">
 				<div>
-					<img src="images/dist/_blog-3.png" alt="#" class="last-posts__item__img">
+					<img src="images/dist/blog-3.png" alt="#" class="last-posts__item__img">
 					<span class="last-posts__item__date">25 апр 2023</span>
 					<h3 class="last-posts__item__title title">Налобные фонари с 1 режимом света</h3>
 					<div class="last-posts__item__descr">
